1999-02-27  Ian Peters  <ipeters@acm.org>

	* Added sound toggle to preferences, properties
	* Previous calls to gnome_triggers_do now call gnibbles_play_sound,
	which checks properties->sound and then calls gnome_triggers_do
	* Fixed potential badness / compile warning in scoreboard.c
	gtk_label_get

1999-02-24  Ian Peters  <ipeters@acm.org>

	* Added license info to *.c, *.h

1999-02-14  Ian Peters  <ipeters@acm.org>

	* Changes all over the place.  Added sounds.

1999-02-13  Ian Peters  <ipeters@acm.org>

	* Score values increase by levels.  Plugged a memory leak by actually
	destroying the scoreboard at the end.

1999-02-13  Ian Peters  <ipeters@acm.org>

	* Fixed bug when you delete the window - connect to delete_event, not
	destroy.

1999-02-12  Ian Peters  <ipeters@acm.org>

	* lots-o-files: Added the code for discouraging missing bonuses too
	much - don't try to run your score up anymore.

1999-02-12  Ian Peters  <ipeters@acm.org>

	* main.c: in pause_game_cb, changed gtk_timeout_remove to
	gtk_callback_disconnect (Doh!), fixes many little bugs.

1999-02-12  Ian Peters  <ipeters@acm.org>

	* scoreboard.c, scoreboard.h, assorted others: Added the scoreboard.

1999-02-12  Ian Peters  <ipeters@acm.org>

	* main.c: end_game_cb now sets paused to 0, so as not to fool
	game_is_running.

1999-02-08  Ian Peters  <ipeters@acm.org>

	* bonus.c (gnibbles_bonus_erase): free the bonus, free the memory, much
	better.

1999-02-07  Ian Peters  <ipeters@acm.org>

	* Removed configure_event_cb, since this should only be done once.
	Triggerd by the gnomedock stuff seeming to generate configure events
	with reckless abandon, even when nothing changes size.  Moved code to
	main.

1999-02-06  Ian Peters  <ipeters@acm.org>

	* Made the padding in the preferences dialog more consistant.

1999-02-06  Ian Peters  <ipeters@acm.org>

	* Fixed a smallish bug in the confirmation dialog stuff.

1999-02-06  Ian Peters  <ipeters@acm.org>
