@@ -65,11 +65,13 @@ static gint pause_game_cb (GtkWidget *widget, gpointer data);
 static gint end_game_cb (GtkWidget *widget, gpointer data);
 static void quit_cb (GtkWidget *widget, gpointer data);
 static void about_cb (GtkWidget *widget, gpointer data);
+static gint show_scores_cb (GtkWidget *widget, gpointer data);
 
 static GnomeUIInfo game_menu[] = {
 	GNOMEUIINFO_MENU_NEW_GAME_ITEM (new_game_cb, NULL),
 	GNOMEUIINFO_MENU_PAUSE_GAME_ITEM (pause_game_cb, NULL),
 	GNOMEUIINFO_SEPARATOR,
+	GNOMEUIINFO_MENU_SCORES_ITEM (show_scores_cb, NULL),
 	GNOMEUIINFO_MENU_END_GAME_ITEM (end_game_cb, (gpointer) 2),
 	GNOMEUIINFO_MENU_EXIT_ITEM (quit_cb, NULL),
 	GNOMEUIINFO_END
@@ -204,7 +206,7 @@ static gint new_game_2_cb (GtkWidget *widget, gpointer data)
 static gint new_game_cb (GtkWidget *widget, gpointer data)
 {
 	gtk_widget_set_sensitive (game_menu[1].widget, TRUE);
-	gtk_widget_set_sensitive (game_menu[3].widget, TRUE);
+	gtk_widget_set_sensitive (game_menu[4].widget, TRUE);
 	gtk_widget_set_sensitive (settings_menu[0].widget, FALSE);
 
 	if (game_running ()) {
@@ -288,6 +290,11 @@ static gint pause_game_cb (GtkWidget *widget, gpointer data)
 	}
 }
 
+static gint show_scores_cb (GtkWidget *widget, gpointer data)
+{
+	gnibbles_show_scores (0);
+}
+
 static gint end_game_cb (GtkWidget *widget, gpointer data)
 {
 	if ((gint) data == 2)
@@ -327,7 +334,7 @@ static gint end_game_cb (GtkWidget *widget, gpointer data)
 	if ((gint) data) {
 		render_logo ();
 		gtk_widget_set_sensitive (game_menu[1].widget, FALSE);
-		gtk_widget_set_sensitive (game_menu[3].widget, FALSE);
+		gtk_widget_set_sensitive (game_menu[4].widget, FALSE);
 		gtk_widget_set_sensitive (settings_menu[0].widget, TRUE);
 	}
 
@@ -393,6 +400,7 @@ static gint main_loop (gpointer data)
 		erase_id = gtk_timeout_add (3000,
 				(GtkFunction) erase_worms_cb,
 				(gpointer) ERASESIZE);
+		gnibbles_log_score ();
 		return (FALSE);
 	}
 
@@ -515,6 +523,8 @@ static void render_logo ()
 int main (int argc, char **argv)
 {
 	gint foo;
+
+	gnome_score_init ("gnibbles");
 	
 	gnome_init ("Gnibbles", VERSION, argc, argv);
 
@@ -537,7 +547,7 @@ int main (int argc, char **argv)
 	set_bg_color ();
 
 	gtk_widget_set_sensitive (game_menu[1].widget, FALSE);
-	gtk_widget_set_sensitive (game_menu[3].widget, FALSE);
+	gtk_widget_set_sensitive (game_menu[4].widget, FALSE);
 
 	gtk_main ();
 
